shgo optimisation with new structure

--- a/renew/04optimise-against-model-data.ipynb
+++ b/renew/04optimise-against-model-data.ipynb
@@ -35,43 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
-    "#     \"\"\"The common features of the model.\n",
-    "#     Get the generation time distribution from the user request,\n",
-    "#     linearly interpolate the non-mechanistic process,\n",
-    "#     exponentiate the result and run the renewal process.\n",
-    "#     \"\"\"\n",
-    "#     gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "#     req_x_vals = np.linspace(0.0, n_times, len(process_req))\n",
-    "#     func = get_linear_interp_func(req_x_vals, process_req)\n",
-    "#     process_vals = func(np.array([float(t) for t in range(n_times)]))\n",
-    "#     process_vals_exp = np.exp(np.array(process_vals))\n",
-    "#     model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
-    "#     return model_result, process_vals_exp\n",
-    "\n",
-    "# def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
-    "#     \"\"\"Only optimise the non-mechanistic process parameters,\n",
-    "#     least squares loss function.\n",
-    "#     \"\"\"\n",
-    "#     incidence = model_func(gen_time_mean, gen_time_sd, parameters, pop, seed, n_times)[0][0]\n",
-    "#     return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])    \n",
-    "\n",
-    "# def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
-    "#     \"\"\"Additionally include the generation time parameters as parameters,\n",
-    "#     least squares loss function.\n",
-    "#     \"\"\"\n",
-    "#     gen_time_mean, gen_time_sd, *process_req = parameters\n",
-    "#     incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
-    "#     return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "14fafa18-a445-4df5-a223-ed02eb23f542",
    "metadata": {},
    "outputs": [],
@@ -82,11 +45,7 @@
     "gen_mean = 5.5\n",
     "gen_sd = 1.8\n",
     "seed = 1.0\n",
-    "test_results = model.func(gen_mean, gen_sd, np.log(test_process), seed)\n",
-    "\n",
-    "def calib_func(parameters: List[float], targets: dict) -> float:\n",
-    "    incidence = model.func(gen_mean, gen_sd, parameters, seed).incidence\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in enumerate(targets)])"
+    "test_results = model.func(gen_mean, gen_sd, np.log(test_process), seed)"
    ]
   },
   {
@@ -107,34 +66,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def calib_func(parameters: List[float], targets: dict) -> float:\n",
+    "    incidence = model.func(gen_mean, gen_sd, parameters, seed).incidence\n",
+    "    return sum([(incidence[t] - d) ** 2 for t, d in enumerate(targets)])\n",
+    "\n",
     "param_bounds = [[-1000.0, np.log(10.0)]] * 4\n",
     "result = minimize(calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_results.incidence), bounds=param_bounds)\n",
     "print(f'target: {test_process}')\n",
     "print(f'result: {np.exp(result.x)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb0b26fc-8d0c-41d0-80d9-187f386c442c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_output_fit(pd.Series(test_results.incidence), test_results, 40, 1.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6b9ae51-c010-4d9b-9e04-5da164127b0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_bounds = [[-1000.0, np.log(10.0)]] * 4\n",
-    "result = minimize(process_calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_gen_mean, test_gen_sd, population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
-    "model_result, process_vals = model_func(test_gen_mean, test_gen_sd, result.x, population, infectious_seed, n_times)\n",
-    "optimised, suscept, r_t = model_result\n",
-    "# plot_output_fit(test_vals, model_result, process_vals, n_times)"
    ]
   },
   {
@@ -152,15 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d852142-63be-4a0e-80fc-22aeff302b22",
+   "id": "22fdb4d0-eba8-49da-b645-b2e85f7176ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def calib_func(parameters: List[float], targets: dict) -> float:\n",
+    "    gen_mean, gen_sd, *parameters = parameters\n",
+    "    incidence = model.func(gen_mean, gen_sd, parameters, seed).incidence\n",
+    "    return sum([(incidence[t] - d) ** 2 for t, d in enumerate(targets)])\n",
+    "\n",
     "param_bounds = [[1.0, 10.0]] + [[1.0, 5.0]] + [[-10000.0, np.log(10.0)]] * 4\n",
-    "result = minimize(all_param_calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
-    "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
-    "optimised, suscept, r_t = model_result\n",
-    "# plot_output_fit(test_vals, model_result, process_vals, n_times)"
+    "result = minimize(calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_results.incidence), bounds=param_bounds)\n",
+    "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
+    "print(f'result: {result.x[0]}, {result.x[1]}, {np.exp(result.x[2:])}')"
    ]
   },
   {
@@ -180,13 +123,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_bounds = [[0.1, 10.0]] + [[0.1, 4.0]] + [[np.log(1.0), np.log(5.0)]] * 4\n",
-    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: all_param_calib_func(x, p, s, t, d), param_bounds)\n",
-    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
-    "optimised, suscept, r_t = model_result\n",
-    "print(test_process)\n",
-    "print(np.exp(np.array(global_result.x[2:])))\n",
-    "plot_output_fit(test_vals, model_result, process_vals, n_times)"
+    "global_result = shgo(lambda x, d=test_results.incidence: calib_func(x, d), param_bounds)\n",
+    "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
+    "print(f'result: {result.x[0]}, {result.x[1]}, {np.exp(result.x[2:])}')"
    ]
   },
   {
