Get another couple of model examples in notebook 04 working

--- a/renew/04optimise-against-model-data.ipynb
+++ b/renew/04optimise-against-model-data.ipynb
@@ -125,7 +125,7 @@
    "source": [
     "global_result = shgo(lambda x, d=test_results.incidence: calib_func(x, d), param_bounds)\n",
     "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
-    "print(f'result: {result.x[0]}, {result.x[1]}, {np.exp(result.x[2:])}')"
+    "print(f'result: {global_result.x[0]}, {global_result.x[1]}, {np.exp(global_result.x[2:])}')"
    ]
   },
   {
@@ -146,13 +146,11 @@
    "outputs": [],
    "source": [
     "def obj_func(parameters):\n",
-    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "    return calib_func(parameters, targets=test_results.incidence)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func)\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result.value[0], ngopt_result.value[1], ngopt_result.value[2:], 1e2, 1.0, len(test_vals))\n",
-    "print(test_process)\n",
-    "print(np.exp(ngopt_result.value[2:]))\n",
-    "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
+    "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
+    "print(f'result: {ngopt_result.value[0]}, {ngopt_result.value[1]}, {np.exp(ngopt_result.value[2:])}')"
    ]
   },
   {
@@ -176,15 +174,11 @@
     "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
-    "    return all_param_calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "    return calib_func([gen_time_mean, gen_time_sd] + list(parameters), targets=test_results.incidence)\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]  # Zero index gets us the args (not kwargs)\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 1e2, 1.0, len(test_vals))\n",
-    "print(ngopt_result[0])\n",
-    "print(ngopt_result[1])\n",
-    "print(test_process)\n",
-    "print(np.exp(ngopt_result[2]))\n",
-    "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
+    "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
+    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')"
    ]
   },
   {
@@ -199,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea83253d-9a37-4165-a58e-613bd64be8c7",
+   "id": "e9668ec7-615b-42b2-9242-b02668ce560e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,15 +202,11 @@
     "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
     "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
-    "    return all_param_calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "    return calib_func([gen_time_mean, gen_time_sd] + list(parameters), targets=test_results.incidence)\n",
     "optimizer = ng.optimizers.TwoPointsDE(parametrization=instrum, budget=2000)\n",
-    "ngopt_result = optimizer.minimize(obj_func).value[0]\n",
-    "ngopt_output, ngopt_process = model_func(ngopt_result[0], ngopt_result[1], ngopt_result[2], 1e2, 1.0, len(test_vals))\n",
-    "print(ngopt_result[0])\n",
-    "print(ngopt_result[1])\n",
-    "print(test_process)\n",
-    "print(np.exp(ngopt_result[2]))\n",
-    "plot_output_fit(test_vals, ngopt_output, ngopt_process, n_times)"
+    "ngopt_result = optimizer.minimize(obj_func).value[0]  # Zero index gets us the args (not kwargs)\n",
+    "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
+    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')"
    ]
   },
   {
@@ -269,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
