... and the last example

--- a/renew/04optimise-against-model-data.ipynb
+++ b/renew/04optimise-against-model-data.ipynb
@@ -227,19 +227,11 @@
    "source": [
     "spread = 0.2\n",
     "jitter = pd.Series(np.random.normal(scale=spread, size=n_times) + 1.0)\n",
-    "jittered_vals = test_vals * jitter\n",
-    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=10.0)\n",
-    "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
-    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
-    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
-    "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
-    "    return all_param_calib_func([gen_time_mean, gen_time_sd] + list(parameters), pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "jittered_vals = test_results.incidence * jitter\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
     "jitter_result = optimizer.minimize(obj_func).value[0]\n",
-    "jitter_output, process_vals = model_func(jitter_result[0], jitter_result[1], jitter_result[2], 1e2, 1.0, len(test_vals))\n",
-    "print(test_process)\n",
-    "print(np.exp(jitter_result[2]))\n",
-    "plot_output_fit(jittered_vals, jitter_output, process_vals, n_times)"
+    "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
+    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')"
    ]
   }
  ],
