Finish tidying up notebook 04 with plotting added

--- a/renew/04optimise-against-model-data.ipynb
+++ b/renew/04optimise-against-model-data.ipynb
@@ -29,7 +29,7 @@
     "import nevergrad as ng\n",
     "\n",
     "from emu_renewal.renew import RenewalModel\n",
-    "from emu_renewal.outputs import Outputs, plot_output_fit"
+    "from emu_renewal.outputs import plot_output_fit"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "gen_mean = 5.5\n",
     "gen_sd = 1.8\n",
     "seed = 1.0\n",
-    "test_results = model.func(gen_mean, gen_sd, np.log(test_process), seed)"
+    "test_results = model.func(gen_mean, gen_sd, np.log(test_process), seed).incidence"
    ]
   },
   {
@@ -71,9 +71,12 @@
     "    return sum([(incidence[t] - d) ** 2 for t, d in enumerate(targets)])\n",
     "\n",
     "param_bounds = [[-1000.0, np.log(10.0)]] * 4\n",
-    "result = minimize(calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_results.incidence), bounds=param_bounds)\n",
+    "result = minimize(calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_results), bounds=param_bounds)\n",
+    "\n",
     "print(f'target: {test_process}')\n",
-    "print(f'result: {np.exp(result.x)}')"
+    "print(f'result: {np.exp(result.x)}')\n",
+    "inc = model.func(gen_mean, gen_sd, result.x, seed).incidence\n",
+    "pd.DataFrame({'opt': inc, 'target': test_results}).plot()"
    ]
   },
   {
@@ -101,18 +104,13 @@
     "    return sum([(incidence[t] - d) ** 2 for t, d in enumerate(targets)])\n",
     "\n",
     "param_bounds = [[1.0, 10.0]] + [[1.0, 5.0]] + [[-10000.0, np.log(10.0)]] * 4\n",
-    "result = minimize(calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_results.incidence), bounds=param_bounds)\n",
+    "result = minimize(calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(test_results), bounds=param_bounds)\n",
+    "\n",
     "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
-    "print(f'result: {result.x[0]}, {result.x[1]}, {np.exp(result.x[2:])}')"
+    "print(f'result: {result.x[0]}, {result.x[1]}, {np.exp(result.x[2:])}')\n",
+    "inc = model.func(result.x[0], result.x[1], result.x[2:], seed).incidence\n",
+    "pd.DataFrame({'opt': inc, 'target': test_results}).plot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a51a40eb-febe-4594-9da0-c22d12ecb0a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -131,9 +129,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "global_result = shgo(lambda x, d=test_results.incidence: calib_func(x, d), param_bounds)\n",
+    "global_result = shgo(lambda x, d=test_results: calib_func(x, d), param_bounds)\n",
+    "\n",
     "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
-    "print(f'result: {global_result.x[0]}, {global_result.x[1]}, {np.exp(global_result.x[2:])}')"
+    "print(f'result: {global_result.x[0]}, {global_result.x[1]}, {np.exp(global_result.x[2:])}')\n",
+    "inc = model.func(global_result.x[0], global_result.x[1], global_result.x[2:], seed).incidence\n",
+    "pd.DataFrame({'opt': inc, 'target': test_results}).plot()"
    ]
   },
   {
@@ -154,11 +155,15 @@
    "outputs": [],
    "source": [
     "def obj_func(parameters):\n",
-    "    return calib_func(parameters, targets=test_results.incidence)\n",
+    "    return calib_func(parameters, targets=test_results)\n",
+    "\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func)\n",
+    "\n",
     "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
-    "print(f'result: {ngopt_result.value[0]}, {ngopt_result.value[1]}, {np.exp(ngopt_result.value[2:])}')"
+    "print(f'result: {ngopt_result.value[0]}, {ngopt_result.value[1]}, {np.exp(ngopt_result.value[2:])}')\n",
+    "inc = model.func(ngopt_result.value[0], ngopt_result.value[1], ngopt_result.value[2:], seed).incidence\n",
+    "pd.DataFrame({'opt': inc, 'target': test_results}).plot()"
    ]
   },
   {
@@ -181,12 +186,16 @@
     "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
     "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
     "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
+    "\n",
     "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd] + list(parameters), targets=test_results.incidence)\n",
+    "    return calib_func([gen_time_mean, gen_time_sd] + list(parameters), targets=test_results)\n",
+    "\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
     "ngopt_result = optimizer.minimize(obj_func).value[0]  # Zero index gets us the args (not kwargs)\n",
     "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
-    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')"
+    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')\n",
+    "inc = model.func(ngopt_result[0], ngopt_result[1], ngopt_result[2:][0], seed).incidence\n",
+    "pd.DataFrame({'opt': inc, 'target': test_results}).plot()"
    ]
   },
   {
@@ -195,7 +204,7 @@
    "metadata": {},
    "source": [
     "#### `TwoPointsDE`\n",
-    "Doesn't work quite as well with `TwoPointsDE`."
+    "An alternative `nevergrad` optimiser."
    ]
   },
   {
@@ -205,16 +214,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_time_mean_param = ng.p.Scalar(init=5.0, lower=0.1, upper=10.0)\n",
-    "gen_time_sd_param = ng.p.Scalar(init=1.0, lower=0.1, upper=4.0)\n",
-    "process_param = ng.p.Array(init=[0.0] * 4, lower=-10.0, upper=10.0)\n",
-    "instrum = ng.p.Instrumentation(gen_time_mean_param, gen_time_sd_param, process_param)\n",
-    "def obj_func(gen_time_mean, gen_time_sd, parameters):\n",
-    "    return calib_func([gen_time_mean, gen_time_sd] + list(parameters), targets=test_results.incidence)\n",
     "optimizer = ng.optimizers.TwoPointsDE(parametrization=instrum, budget=2000)\n",
-    "ngopt_result = optimizer.minimize(obj_func).value[0]  # Zero index gets us the args (not kwargs)\n",
+    "ngopt_result = optimizer.minimize(obj_func).value[0]\n",
+    "\n",
     "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
-    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')"
+    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')\n",
+    "inc = model.func(ngopt_result[0], ngopt_result[1], ngopt_result[2:][0], seed).incidence\n",
+    "pd.DataFrame({'opt': inc, 'target': test_results}).plot()"
    ]
   },
   {
@@ -235,11 +241,15 @@
    "source": [
     "spread = 0.2\n",
     "jitter = pd.Series(np.random.normal(scale=spread, size=n_times) + 1.0)\n",
-    "jittered_vals = test_results.incidence * jitter\n",
+    "jittered_vals = test_results * jitter\n",
+    "\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=instrum, budget=2000)\n",
     "jitter_result = optimizer.minimize(obj_func).value[0]\n",
+    "\n",
     "print(f'target: {gen_mean}, {gen_sd}, {test_process}')\n",
-    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')"
+    "print(f'result: {ngopt_result[0]}, {ngopt_result[1]}, {np.exp(ngopt_result[2:])}')\n",
+    "inc = model.func(ngopt_result[0], ngopt_result[1], ngopt_result[2:][0], seed).incidence\n",
+    "pd.DataFrame({'opt': inc, 'target': jittered_vals}).plot()"
    ]
   }
  ],
