Clean up calibration notebook 06

--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -26,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data and fixed parameters\n",
     "run_in = 30\n",
     "n_process_periods = 12\n",
     "raw_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)['MYS']\n",
@@ -34,10 +33,7 @@
     "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS']\n",
     "mys_data.index += run_in\n",
     "n_times = len(mys_data) + run_in\n",
-    "calib_kwargs = {'pop': 33e6, 'n_times': n_times, 'run_in': run_in, 'targets': mys_data}\n",
-    "fixed_param_desc = '### Fixed parameter values\\n ' \\\n",
-    "    f'The target population is initialised as {str(int(calib_kwargs[\"pop\"]))} susceptible persons. ' \\\n",
-    "    f'The simulation runs for a run-in period of {run_in} days before comparison against the calibration data commences.\\n'"
+    "calib_kwargs = {'pop': 33e6, 'n_times': n_times, 'run_in': run_in, 'targets': mys_data}"
    ]
   },
   {
@@ -91,7 +87,7 @@
     "\n",
     "with pm.Model() as pmm:\n",
     "    variables = use_model(priors, obj_func)\n",
-    "    idata = pm.sample(step=[pm.DEMetropolisZ(variables)])"
+    "    idata = pm.sample(step=[pm.DEMetropolisZ(variables)], draws=100)"
    ]
   },
   {
@@ -111,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mean_posterior_params = mpp = np.array(az.summary(idata)[\"mean\"])"
+    "mean_posterior_params = mpp = np.array(az.summary(idata)['mean'])"
    ]
   },
   {
@@ -125,11 +121,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f8255a61-79dc-4733-a3dc-158d54caae96",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1f56ba1-b086-40cf-aede-372740f49936",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "![Results of fitting to data from Malaysia.](results_fig.svg){#fig-fit}"
+    "comparison = pd.DataFrame()\n",
+    "comparison['calib'] = incidence\n",
+    "comparison['target'] = calib_kwargs['targets']\n",
+    "    \n",
+    "comparison.plot()"
    ]
   }
  ],
