--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -10,6 +10,7 @@
     "from typing import List\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "pd.options.plotting.backend = 'plotly'\n",
     "from datetime import datetime\n",
     "from estival import priors as esp\n",
     "import pymc as pm\n",
@@ -84,10 +85,11 @@
     "priors.append(esp.UniformPrior('Log non-mechanistic process values', (proc_req['lower'], proc_req['upper']), size=n_process_periods))\n",
     "renewal_model = RenewalModel(calib_kwargs['pop'], n_times, run_in, n_process_periods)\n",
     "obj_func = get_obj_func(renewal_model)\n",
+    "n_draws = 100\n",
     "\n",
     "with pm.Model() as pmm:\n",
     "    variables = use_model(priors, obj_func)\n",
-    "    idata = pm.sample(step=[pm.DEMetropolisZ(variables)], draws=100)"
+    "    idata = pm.sample(step=[pm.DEMetropolisZ(variables)], draws=n_draws)"
    ]
   },
   {
@@ -123,15 +125,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1f56ba1-b086-40cf-aede-372740f49936",
+   "id": "2d0a0891-9c69-466c-a869-f5fbade3a4f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "comparison = pd.DataFrame()\n",
-    "comparison['calib'] = incidence\n",
-    "comparison['target'] = calib_kwargs['targets']\n",
-    "    \n",
-    "comparison.plot()"
+    "import random\n",
+    "\n",
+    "burn_in = 10\n",
+    "n_samples = 10\n",
+    "idata_df = idata.to_dataframe()\n",
+    "idata_df = idata_df.loc[idata_df.index >= burn_in]\n",
+    "sampled_draws = sorted(random.sample(range(burn_in, n_draws), n_samples))\n",
+    "sampled_df = idata_df[[i in sampled_draws for i in idata_df['draw']]]\n",
+    "\n",
+    "spaghetti = pd.DataFrame()\n",
+    "for _, row in sampled_df.iterrows():\n",
+    "    proc = [row[6]] + list(row[9: 18]) + list(row[7: 9])\n",
+    "    incidence = renewal_model.func(row[2], row[3], proc, row[5]).incidence * row[4]\n",
+    "    spaghetti[_] = incidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70ab40ed-8da4-4464-bb7b-64058bf063f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spaghetti['targets'] = calib_kwargs['targets']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60b3e304-71ad-4d18-a55d-10ff65beebbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spaghetti.plot()"
    ]
   }
  ],
@@ -151,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
