Rename index variable

--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -139,10 +139,20 @@
     "sampled_df = idata_df[[i in sampled_draws for i in idata_df['draw']]]\n",
     "\n",
     "spaghetti = pd.DataFrame()\n",
-    "for _, row in sampled_df.iterrows():\n",
+    "for idx, row in sampled_df.iterrows():\n",
     "    proc = [row[6]] + list(row[9: 18]) + list(row[7: 9])\n",
     "    incidence = renewal_model.func(row[2], row[3], proc, row[5]).incidence * row[4]\n",
-    "    spaghetti[_] = incidence"
+    "    spaghetti[idx] = incidence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9aa5e62c-fd8b-4179-9565-9ee5db9fbf11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spaghetti"
    ]
   },
   {
