Save broken code for later try to use xarrays properly

--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -125,34 +125,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d0a0891-9c69-466c-a869-f5fbade3a4f5",
+   "id": "8b79ca76-3b9e-4d52-84e1-bafc7a37126c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
-    "\n",
     "burn_in = 10\n",
     "n_samples = 10\n",
-    "idata_df = idata.to_dataframe()\n",
-    "idata_df = idata_df.loc[idata_df.index >= burn_in]\n",
-    "sampled_draws = sorted(random.sample(range(burn_in, n_draws), n_samples))\n",
-    "sampled_df = idata_df[[i in sampled_draws for i in idata_df['draw']]]\n",
-    "\n",
-    "spaghetti = pd.DataFrame()\n",
-    "for idx, row in sampled_df.iterrows():\n",
-    "    proc = [row[6]] + list(row[9: 18]) + list(row[7: 9])\n",
-    "    incidence = renewal_model.func(row[2], row[3], proc, row[5]).incidence * row[4]\n",
-    "    spaghetti[idx] = incidence"
+    "idata_burnt = idata.sel(draw=slice(10, None))\n",
+    "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa5e62c-fd8b-4179-9565-9ee5db9fbf11",
+   "id": "20fa10aa-298f-4154-b978-cfada31a3c49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaghetti"
+    "burn_in = 10\n",
+    "n_samples = 10\n",
+    "idata_burnt = idata.sel(draw=slice(10, None))\n",
+    "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
+    "\n",
+    "spaghetti = pd.DataFrame()\n",
+    "for i, col in enumerate(idata_sampled.draw):\n",
+    "    gen_mean = float(col.variables['Generation time mean (days)'])\n",
+    "    gen_sd = float(idata_sampled.variables['Generation time standard deviation (days)'][i])\n",
+    "    proc = np.array(idata_sampled.variables['Log non-mechanistic process values'][i])\n",
+    "    seed = float(idata_sampled.variables['Log starting seed rate'][i])\n",
+    "    incidence = renewal_model.func(gen_mean, gen_sd, proc, seed).incidence * float(idata_sampled.variables['Case detection proportion'][i])\n",
+    "    spaghetti[f'{int(col)}, {int(col.chain)}'] = incidence"
    ]
   },
   {
@@ -168,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b3e304-71ad-4d18-a55d-10ff65beebbe",
+   "id": "d5738c5c-590a-493d-89c6-7b7d9b0cb092",
    "metadata": {},
    "outputs": [],
    "source": [
