--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -13,6 +13,7 @@
     "pd.options.plotting.backend = 'plotly'\n",
     "from datetime import datetime\n",
     "from estival import priors as esp\n",
+    "from estival.sampling import tools as esamp\n",
     "import pymc as pm\n",
     "import arviz as az\n",
     "\n",
@@ -138,23 +139,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20fa10aa-298f-4154-b978-cfada31a3c49",
+   "id": "97560872-2345-412f-b7c6-76d5da022437",
    "metadata": {},
    "outputs": [],
    "source": [
-    "burn_in = 10\n",
-    "n_samples = 10\n",
-    "idata_burnt = idata.sel(draw=slice(10, None))\n",
-    "idata_sampled = az.extract(idata_burnt, num_samples=n_samples)\n",
-    "\n",
+    "sample_params = esamp.xarray_to_sampleiterator(idata_sampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f790ef2b-ca42-46ea-ad71-8f3274a2ad59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "spaghetti = pd.DataFrame()\n",
-    "for i, col in enumerate(idata_sampled.draw):\n",
-    "    gen_mean = float(col.variables['Generation time mean (days)'])\n",
-    "    gen_sd = float(idata_sampled.variables['Generation time standard deviation (days)'][i])\n",
-    "    proc = np.array(idata_sampled.variables['Log non-mechanistic process values'][i])\n",
-    "    seed = float(idata_sampled.variables['Log starting seed rate'][i])\n",
-    "    incidence = renewal_model.func(gen_mean, gen_sd, proc, seed).incidence * float(idata_sampled.variables['Case detection proportion'][i])\n",
-    "    spaghetti[f'{int(col)}, {int(col.chain)}'] = incidence"
+    "for i, p in enumerate(sample_params):\n",
+    "    gen_mean = p['Generation time mean (days)']\n",
+    "    gen_sd = p['Generation time standard deviation (days)']\n",
+    "    proc = p['Log non-mechanistic process values']\n",
+    "    seed = p['Log starting seed rate']\n",
+    "    incidence = renewal_model.func(gen_mean, gen_sd, proc, seed).incidence * p['Case detection proportion']\n",
+    "    spaghetti[i] = incidence"
    ]
   },
   {
@@ -164,16 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spaghetti['targets'] = calib_kwargs['targets']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5738c5c-590a-493d-89c6-7b7d9b0cb092",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "spaghetti['targets'] = calib_kwargs['targets']\n",
     "spaghetti.plot()"
    ]
   }
@@ -194,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
