--- a/renew/06calibration-wip.ipynb
+++ b/renew/06calibration-wip.ipynb
@@ -160,7 +160,8 @@
     "    proc = p['Log non-mechanistic process values']\n",
     "    seed = p['Log starting seed rate']\n",
     "    incidence = renewal_model.func(gen_mean, gen_sd, proc, seed).incidence * p['Case detection proportion']\n",
-    "    spaghetti[i] = incidence"
+    "    spaghetti[i] = incidence\n",
+    "spaghetti.columns = [str(i) for i in sample_params.index.to_flat_index()]"
    ]
   },
   {
